updating maven xml

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Run Test
         if: always()
-        run: mvn package
+        run: mvn clean install
         continue-on-error: true
         env:
           clientUser: ${{ secrets.CIENTUSER }}
