--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,13 +23,13 @@ jobs:
           clientSecret: ${{ secrets.CLIENTSECRET }}
           browser: chrome
 
-      - name: Get Allure history
-        uses: actions/checkout@v3
-        if: always()
-        continue-on-error: true
-        with:
-          ref: gh-pages
-          path: gh-pages
+#      - name: Get Allure history
+#        uses: actions/checkout@v3
+#        if: always()
+#        continue-on-error: true
+#        with:
+#          ref: gh-pages
+#          path: gh-pages
 
       - name: Allure Report action from marketplace
         uses: simple-elf/allure-report-action@master
